hydra/test/test_examples/type_errors/binop.tpc
tele bit<32> x;
init {
    x = x + false;
} 
telemetry {} 
check {}